[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/TowerBasic.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Arrow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/torra.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 500.0
_sections_unfolded = [ "Resource" ]

[node name="TowerBasic" type="Area2D" index="0"]

scale = Vector2( 0.4, 0.4 )
input_pickable = true
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
priority = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
bala = ExtResource( 2 )

[node name="Tower" type="Sprite" parent="." index="0"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="ReloadTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.75
one_shot = false
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )
one_way_collision = true
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="." to="." method="_on_TowerBasic_area_entered"]

[connection signal="area_exited" from="." to="." method="_on_TowerBasic_area_exited"]

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]


